development done pushing initial release

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aviator-project-node",
+  "name": "pushpa_rani-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
